# DatasetMaker

./: CMakeLists.txt  DataserMaker.pro  DataserMaker_zh_CN.ts  ImageLabel.cpp  ImageLabel.h  cls.cpp  cls.h  cls.ui  datasetmaker.cpp  datasetmaker.h  datasetmaker.ui  detection.cpp  detection.h  detection.ui  left.cpp  left.h  left.ui  leftPart.cpp  leftPart.h  leftPart.ui  main.cpp  开发日志.txt
include/: ImageLabel.h  autoMode.h  cls.h  common.h  datasetmaker.h  detection.h  leftPart.h
src/: ImageLabel.cpp  autoMode.cpp  cls.cpp  common.cpp  datasetmaker.cpp  detection.cpp  leftPart.cpp  main.cpp
ui/: cls.ui  datasetmaker.ui  detection.ui  leftPart.ui
